# macros_algo

./: CMakeLists.txt  README.md
include/: merge_sort.h  quick_sort.h
src/: merge_sort.c  quick_sort.c
test/: quick_sort_test.c
